CDP-1892 FDA: Edit ACL Scenario Names in FDA: implement Edit ACL Scenario Name window